tests/fixtures/invalid/int_dict.py
# Cannot call int() with Dict[str, int]
x = int({"a": 1})
